--- a/static/scss/_general.scss
+++ b/static/scss/_general.scss
@@ -12,7 +12,7 @@ body {
         position:relative;
         height:100%;
         .main-content {
-            margin-top: 172px;
+            margin-top: ($navbar-height*2) - 10;
             position: relative;
             height: 100%;
             @include breakpoint("desktop") {
