--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -1,12 +1,13 @@
 .navbar-home {
 	.navbar {
 		border:0;
+		height: $navbar-height;
 		.navbar-header {
 			.navbar-brand {
 				padding: 0.5em 0;
 				height: 65px;
 				@include breakpoint("tablet") {
-					height:65px;
+					height:$navbar-height;
 				}
 				img {
 					max-height:100%;
