--- a/static/scss/_strap-bootstrap.scss
+++ b/static/scss/_strap-bootstrap.scss
@@ -38,7 +38,7 @@ $btn-default-border:             #ccc !default;
 // Inputs 
 $input-color:                    $dark-gray !default;
 // Navbar
-$navbar-height:                    75px !default;
+$navbar-height:                    65px !default;
 $navbar-default-color:             $strap-main !default;
 $navbar-default-bg:                #ffffff !default;
 $navbar-default-border:            none !default;
